v3.1.1.1 -Add another template parameter to KamiCommand that allows retrieving a template with only 1 alias for each subcommand